fixed spacing

--- a/src/main/resources/css/EpicPlugin.css
+++ b/src/main/resources/css/EpicPlugin.css
@@ -415,7 +415,7 @@ ul.inline > .epic-container {
 }
 
 .epic-info > ul {
-	margin-bottom: 24px;
+	margin-bottom: 35px;
 }
 
 .completed-stories,
